<resources>
    <string name="app_name">jaringobi</string>
    <string name="intro">쉽고 빠른 지출 관리</string>

    <!-- 지출 내역 추가 페이지 -->
    <string name="receipt_picture">영수증 사진</string>
    <string name="directly">직접 입력</string>
    <string name="place">사용처</string>
    <string name="amount">금액</string>
    <string name="won">원</string>
    <string name="add">추가하기</string>
    <string name="date">날짜</string>

    <!-- 시작 페이지 -->
    <string name="text_select_goal">지출 목표 설정하기</string>
    <string name="text_modify_goal">지출 목표 수정하기</string>
    <string name="text_start">바로 시작하기</string>

    <!-- 다이얼로그 -->
    <string name="text_dialog_title">이번 달 지출 목표</string>
    <string name="text_dialog_ok">확인</string>
    <string name="text_dialog_cancel">취소</string>

    <!-- 메인 페이지 -->
    <string name="text_month_goal">이번 달 지출 목표</string>
    <string name="text_modify_month_goal">수정</string>
    <string name="text_add_list">지출내역 추가하기</string>
    <string name="text_total_cost">총 지출</string>
    <string name="text_recent_cost">최근 지출내역</string>
    <string name="text_detail_cost">지출내역 더보기</string>
    <string name="text_now_month">%s월</string>
    <string name="text_total_cost_num">%s원</string>
    <string name="text_compare_expense">지난 달보다 %s원 %s 썼어요</string>
    <string name="text_compare_expense_percent">%.1f%%</string>
    <string name="upload_receipt">영수증 사진 업로드하기</string>

    <!-- 지출 목록 페이지 -->
    <string name="month_display">%d월</string>
    <string name="text_dialog_delete">삭제</string>
    <string name="text_dialog_modify">수정</string>


</resources>
