<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/light_gray"
        android:paddingHorizontal="6dp"
        android:paddingVertical="0dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/ToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receipt_picture"
            android:textColor="@drawable/toggle_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/ToggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/directly"
            android:textColor="@drawable/toggle_button_text" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:orientation="vertical">

        <TextView
            style="@style/EditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/date_picker"
            android:text="@string/date" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <TextView
            style="@style/EditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/input_place"
            android:text="@string/place" />

        <EditText
            android:id="@+id/input_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/pretendard_medium"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <TextView
            style="@style/EditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/input_amount"
            android:text="@string/amount" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/pretendard_medium"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="center_horizontal"
                android:text="@string/won"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/GrayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"
        app:backgroundTint="@color/light_gray" />
</LinearLayout>
