<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/EditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/date_picker"
            android:text="@string/date" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <TextView
            style="@style/EditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/input_store"
            android:text="@string/place" />

        <EditText
            android:id="@+id/input_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/pretendard_medium"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <TextView
            style="@style/EditTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/input_cost"
            android:text="@string/amount" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/pretendard_medium"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="center_horizontal"
                android:text="@string/won"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_button"
        style="@style/main_semibold_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_rectangle"
        android:paddingVertical="16dp"
        android:text="@string/add"
        android:textColor="@color/white" />
</LinearLayout>
