<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_mainpage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="134dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="@id/tb_mainpage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tb_mainpage" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_mainpage" />

    <TextView
        android:id="@+id/tv_now_month"
        style="@style/main_medium_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="5월"
        app:layout_constraintEnd_toStartOf="@id/iv_right"
        app:layout_constraintStart_toEndOf="@id/iv_left"
        app:layout_constraintTop_toTopOf="@id/iv_left" />

    <ImageView
        android:id="@+id/iv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_right"
        app:layout_constraintStart_toEndOf="@id/tv_now_month"
        app:layout_constraintTop_toTopOf="@id/iv_left" />

    <TextView
        android:id="@+id/tv_month_goal"
        style="@style/main_semibold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_month_goal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/iv_left"
        app:layout_constraintTop_toBottomOf="@id/tv_now_month" />

    <FrameLayout
        android:id="@+id/layout_with_data"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_month_goal">

        <TextView
            android:id="@+id/tv_month_goal_data"
            style="@style/main_semibold_18"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="14dp"
            android:background="@drawable/bg_month_goal"
            android:backgroundTint="@color/light_grey"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:textColor="@color/black" />

        <TextView
            style="@style/main_semibold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="26dp"
            android:text="원" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_without_data"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_month_goal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_set_goal"
            style="@style/main_semibold_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@color/light_grey"
            android:paddingVertical="16dp"
            android:text="@string/text_select_goal"
            android:textColor="@color/black" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_list"
        style="@style/main_semibold_18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/round_rectangle"
        android:paddingVertical="16dp"
        android:text="@string/text_add_list"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_month_goal" />

    <TextView
        android:id="@+id/tv_total_cost_view"
        style="@style/main_semibold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/text_total_cost"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/btn_add_list"
        app:layout_constraintTop_toBottomOf="@id/btn_add_list" />

    <TextView
        android:id="@+id/tv_total_cost"
        style="@style/main_semibold_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:text="@string/text_total_cost_num"
        app:layout_constraintStart_toStartOf="@id/tv_total_cost_view"
        app:layout_constraintTop_toBottomOf="@id/tv_total_cost_view" />

    <ImageView
        android:id="@+id/iv_updown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toBottomOf="@id/tv_total_cost"
        app:layout_constraintStart_toEndOf="@id/tv_total_cost"
        app:layout_constraintTop_toTopOf="@id/tv_total_cost" />

    <TextView
        android:id="@+id/tv_compare_cost_percent"
        style="@style/main_medium_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="@string/text_compare_expense_percent"
        app:layout_constraintBottom_toBottomOf="@id/tv_total_cost"
        app:layout_constraintStart_toEndOf="@id/iv_updown"
        app:layout_constraintTop_toTopOf="@id/tv_total_cost" />

    <TextView
        android:id="@+id/tv_compare_cost"
        style="@style/main_medium_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@string/text_compare_expense"
        android:textColor="@color/dark_grey"
        app:layout_constraintStart_toStartOf="@id/tv_total_cost"
        app:layout_constraintTop_toBottomOf="@id/tv_total_cost" />

    <TextView
        android:id="@+id/tv_recent_cost"
        style="@style/main_semibold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_recent_cost"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_total_cost_view"
        app:layout_constraintTop_toBottomOf="@id/tv_compare_cost" />

    <ListView
        android:id="@+id/lv_recent_cost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_cost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_detail_cost"
        style="@style/main_semibold_18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_rectangle"
        android:paddingVertical="16dp"
        android:text="@string/text_detail_cost"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_add_list"
        app:layout_constraintStart_toStartOf="@id/btn_add_list" />

</androidx.constraintlayout.widget.ConstraintLayout>
